--- a/appWeb/package.json
+++ b/appWeb/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.6",
@@ -21,6 +22,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "parser": "^0.1.4",
+    "sequelize": "^6.13.0",
     "session": "^0.1.0",
     "validator": "^13.7.0"
   }
