--- a/appWeb/package.json
+++ b/appWeb/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "errorhandler": "^1.5.1",
     "express": "^4.17.2",
+    "express-generator": "^4.16.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "multer": "^1.4.4",
